Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextObjTextObjField.quorum
class Main
    Text t
    Text txt
    action main
        t:SetValue("text")
        txt = cast(Text, t)
        if txt:GetValue() = "text"
            output "passed"
        end
    end
end