Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjTextObj.quorum
class main
    action Main
        Text t
        Boolean bool
        t:setValue("text")
        bool = cast(Boolean, t)
    end
end